[package]
name = "strong-lines"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.14", features = ["jpeg"] }
rand = "0.8"
rodio = "0.19"

[profile.release]
opt-level = 'z'     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*
